--- a/tutorial/pom.xml
+++ b/tutorial/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.uniknow.agiledev.dbc4j</groupId>
         <artifactId>parent</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.2.0</version>
     </parent>
 
     <artifactId>tutorial</artifactId>
