--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,14 @@
                     </docletArtifact>
                     <detectJavaApiLink>true</detectJavaApiLink>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
