--- a/dbc4java/pom.xml
+++ b/dbc4java/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.uniknow.agiledev.dbc4j</groupId>
         <artifactId>parent</artifactId>
-        <version>0.2.0</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.uniknow.agiledev</groupId>
