--- a/dbc4java/pom.xml
+++ b/dbc4java/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.uniknow.agiledev.dbc4j</groupId>
+        <groupId>org.uniknow.agiledev.dbc4java</groupId>
         <artifactId>parent</artifactId>
         <version>0.3.0-SNAPSHOT</version>
     </parent>
