--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <name>AgileDev DBC4J</name>
-    <groupId>org.uniknow.agiledev.dbc4j</groupId>
+    <groupId>org.uniknow.agiledev.dbc4java</groupId>
     <artifactId>parent</artifactId>
     <version>0.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
